fix: increase text contrast
- fixed #30 
- tested contrast using Cypress and `cypress-axe` in https://github.com/cypress-io/cypress-example-todomvc/pull/124

--- a/index.css
+++ b/index.css
@@ -52,19 +52,19 @@ body {
 .todoapp input::-webkit-input-placeholder {
 	font-style: italic;
 	font-weight: 300;
-	color: #e6e6e6;
+	color: #111111;
 }
 
 .todoapp input::-moz-placeholder {
 	font-style: italic;
 	font-weight: 300;
-	color: #e6e6e6;
+	color: #111111;
 }
 
 .todoapp input::input-placeholder {
 	font-style: italic;
 	font-weight: 300;
-	color: #e6e6e6;
+	color: #111111;
 }
 
 .todoapp h1 {
@@ -74,7 +74,7 @@ body {
 	font-size: 100px;
 	font-weight: 100;
 	text-align: center;
-	color: rgba(175, 47, 47, 0.15);
+	color: #b83f45;
 	-webkit-text-rendering: optimizeLegibility;
 	-moz-text-rendering: optimizeLegibility;
 	text-rendering: optimizeLegibility;
@@ -213,6 +213,7 @@ body {
 	display: block;
 	line-height: 1.2;
 	transition: color 0.4s;
+	font-weight: bolder;
 }
 
 .todo-list li.completed label {
@@ -256,10 +257,10 @@ body {
 }
 
 .footer {
-	color: #777;
 	padding: 10px 15px;
 	height: 20px;
 	text-align: center;
+	font-size: large;
 	border-top: 1px solid #e6e6e6;
 }
 
@@ -332,7 +333,7 @@ html .clear-completed:active {
 
 .info {
 	margin: 65px auto 0;
-	color: #bfbfbf;
+	color: #4d4d4d;
 	font-size: 10px;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 	text-align: center;
